Fawkez 1.2 'Charlie X'

  * New features:
  * Update to fop 0.94
  * Update to xerces 2.9.1
  * Update to commons-httpclient 3.1
  * Update to commons-cli 1.1
  * Update to docbook-xsl 1.73.2
  * Update to FindBugs 1.3.3 (#45) (JRE 5 required)
  * Update to PMD 4.1
  * Update to fb-contrib 3.4.2
  * Update to Checkstyle 4.4
  * Fixed bugs: #43 #50 #53
  * The log messages can now use a custom logger to log to and
    does not need to use the logger assigned to the LoggableImpl.
    Therefore the LogMessageGenerator ant task has 2 more
    parameters: allowUseOfBaseLogger and customLoggerClass
  * The LogFormater now also respects java text formating in
    trace messages (was broken).
  * Generated types now throw more detailed exceptions for
    length and value range validations.
  * Generated StrongTypes (immutable ones) do implement a
    common interface (StrongType).
  * The jcreport can now read emma 'es' files to as coverage
    info. http://emma.sourceforge.net/

Fawkez 1.1 'The Man Trap' (March 31, 2007)
http://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_1_0

  * New features: #34
  * Added new severity levels as proposed in #16
  * Fixed bugs: #10
  * added fb-contrib support #14 (V3.0.5)
  * added up-to-date check for retrieve-3rd-party-libs target

Fawkez 1.0 'going public' (November 26, 2006)
http://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_0_0