@@ -23,6 +23,17 @@ Fawkez 1.2 'Charlie X'
     common interface (StrongType).
   * The jcreport can now read emma 'es' files to as coverage
     info. http://emma.sourceforge.net/
+  * The generated value objects do now have a copy constructor if
+    they do not have a final and initialized field.
+    For generated type changes please also check out:
+    https://www.jcoderz.org/fawkez/wiki/SimpleTypesGenerator
+  * User type names camel case alignment was not correct. A member
+    of a value type named 'TestValue' got the name 'mTestvalue' but
+    should be mTestValue. Take care since this changes the interface
+    of the generated code!
+  * Generated service level exceptions are now abstract to prevent
+    them from being directly used.
+
 
 Fawkez 1.1 'The Man Trap' (March 31, 2007)
 http://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_1_0
